# kterminal

./: .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  build_test.ps1
dependencies/fontgen/: Consolas12_bmp.c  Consolas12_bmp.h
kterminal/: CMakeLists.txt
kterminal/include/internal/: atomic_lock.h  fontrender.h  logbuffer.h  ringbuffer.h  types.h  vterminal.h
kterminal/include/kterminal/: kterm.h  kterm_api.h  kterm_extern.h  types.h
kterminal/include/kterminal/internal/: kterm_types.h
kterminal/source/: kterm.c
kterminal/source/fonts/: Consolas12_bmp.c  fontstyle.c
kterminal/source/internal/: atomic_lock.c  fontrender.c  logbuffer.c  ringbuffer.c  vterminal.c
kterminal_old/include/kterminal/: colours.h  kterm.h  renderer.h  terminal.h
kterminal_old/include/kterminal/fonts/: Consolas12_bmp.h
kterminal_old/source/: renderer.c  terminal.c
misc/: requirements.txt  test.py  venv.sh
tests/: CMakeLists.txt
tests/source/: main.cpp
